Fix some bugs that FindBugs reported